# q4-Capstone-calendar-app

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
cal_app/: admin.py  apps.py  forms.py  models.py  views.py
cal_app/migrations/: 0001_initial.py  0002_alter_myuser_age.py  0003_alter_goal_when.py
daily/: forms.py  models.py  views.py
daily/migrations/: 0001_initial.py
hardgoals/: asgi.py  settings.py  urls.py  wsgi.py
month_app/: admin.py  apps.py  bcal.py  models.py  urls.py  utils.py  views.py
month_app/migrations/: 0001_initial.py  0002_event_goal.py
static/daily/: daily.css
static/month_app/: calendar.css
static/welcome/assets/css/: main.css
static/welcome/assets/sass/: main.scss
templates/: base.html  calendar.html  daily.html  event_detail.html  generic_form.html  index.html  month_app.html  profile.html
user_stuff/: apps.py  forms.py  views.py
welcome/: views.py
welcome/templates/html5up-alpha/: elements.html  generic.html  index.html
welcome/templates/html5up-alpha/assets/css/: main.css
